[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/entities/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player/iddle0.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/iddle1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player/hand0.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player/hand1.png" type="Texture" id=5]
[ext_resource path="res://scripts/Pivot.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
}, {
"frames": [  ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "Jump",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": false,
"name": "Firing",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 7, 8 )

[node name="Player" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
run_speed = 100
jump_speed = -300
gravity = 1200

[node name="BodySprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "Idle"
playing = true
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="BananaSprite" type="AnimatedSprite" parent="." index="1"]

position = Vector2( -7, 2 )
frames = SubResource( 2 )
animation = "Firing"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 3 )

[node name="Pivot" type="Position2D" parent="." index="3"]

script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="CameraOffset" type="Position2D" parent="Pivot" index="0"]

position = Vector2( 15, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="Pivot/CameraOffset" index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 8.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Smoothing" ]

[connection signal="animation_finished" from="BananaSprite" to="." method="_on_BananaSprite_animation_finished"]


